# Mailspring

./: .gitignore  makefile  package.json
app/src/: config.es6  config.ts  mock-mailsync-process.es6  mock-mailsync-process.ts
app/src/browser/: application.es6  application.ts  autoupdate-manager.es6  autoupdate-manager.ts  main.js  window-manager.es6  window-manager.ts
app/src/flux/: mailsync-bridge.es6  mailsync-bridge.ts
app/src/flux/tasks/: send-draft-task.es6  send-draft-task.ts
app/src/global/: mailspring-exports.es6  mailspring-exports.js
mmailsync/: .gitignore  Cargo.toml
mmailsync/src/: core.rs  main.rs
mmailsync/src/common/: account.rs  address.rs  feature_usage.rs  identity.rs  mod.rs  settings.rs
mmailsync/src/common/settings/: mail_client.rs
mmailsync/src/models/: account.rs  mod.rs
scripts/: postinstall.js
