[package]
name = "mmailsync"
version = "0.1.0"
description = "Syncing mail for Mailspring client"
authors = ["gaconkzk <gaconkzk@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
clap = "^2.31.2"
ctrlc = "^3.1.1"
imap-proto = "^0.7.0"
tokio-imap = "^0.4.0"
futures = "^0.1"
futures-state-stream = "^0.1"
tokio-current-thread = "^0.1"